--- a/index.html
+++ b/index.html
@@ -3,94 +3,88 @@
   <head>
     <meta charset="utf-8">
     <title>Gmail</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <!-- heading top-->
-    <div class="top">
-      <img class="logo" src="img/logo.png" alt="">
-      <span class="text">Gmail</span>
+    <!-- block1 -->
+    <div class="block1">
+      <img class="icon" src="img/icon.png" alt="icon">
+      <span class="gmail">Gmail</p></span>
+
     </div>
-    <!-- fine heading top -->
+    <!-- end block1 -->
 
     <hr>
 
-    <!-- heading bottom -->
-    <div class="bottom">
+    <!-- block2 -->
+    <div class="block2">
 
       <!-- search -->
-      <div class="search">
-        <input type="text" placeholder="Search">
-        <button type="button" name="button">VAI</button>
-      </div>
-      <!-- fine search -->
+      <span>
+        <form class="search" action="index.html" method="post">
+          <input type="text" placeholder="Search">
+          <input type="submit" name="" value="VAI">
+        </form>
+      </span>
+      <!-- end search -->
 
-      <!-- notifiche -->
-      <div class="notifications">
-        <p>You have <span class="number">30</span> unread</p>
-      </div>
-      <!-- fine notifiche -->
-
-    </div>  
-
-    <hr>
-
-    <!-- email -->
-    <div class="emails">
-
-      <!-- email1 -->
-      <div class="unread">
-        <span class="check">
-        <input type="checkbox"></span>
-        <span>&starf;</span>
-        <span><b>Oggetto della email</b></span>
-        <span class="content"> - testo della mail...</span>
-      </div>
-      <!-- fine email1 -->
-
-      <!-- email2 -->
-      <div class="read">
-        <span class="check">
-        <input type="checkbox"></span>
-        <span>&starf;</span>
-        <span><b>Oggetto della email</b></span>
-        <span class="content"> - testo della mail...</span>
-      </div>
-      <!-- fine email2 -->
-
-      <!-- email3 -->
-      <div class="unread">
-        <span class="check">
-        <input type="checkbox"></span>
-        <span>&starf;</span>
-        <span><b>Oggetto della email</b></span>
-        <span class="content"> - testo della mail...</span>
-      </div>
-      <!-- fine email3 -->
-
-      <!-- email4 -->
-      <div class="unread">
-        <span class="check">
-        <input type="checkbox"></span>
-        <span>&starf;</span>
-        <span><b>Oggetto della email</b></span>
-        <span class="content"> - testo della mail...</span>
-      </div>
-      <!-- fine email4 -->
-
+      <!-- notifications -->
+      <span>You have <span class="number">30</span> unread</span>
+      <!-- end notifications -->
 
     </div>
-    <!-- fine messages -->
+    <!-- end block2 -->
 
     <hr>
 
-    <!-- footer -->
-    <footer class="footer">
-      <span class="gmail"><b>GMail</b></span>
-      <span><i>powered by Davide</i></span>
-    </footer>
-    <!-- fine footer -->
+    <!-- boxmail -->
+    <div class="boxmail">
+
+      <!-- emai1 -->
+      <div class="unread">
+        <input type="checkbox" name="" value="">
+        <span class="star">&starf; Oggetto della email </span>
+        <span class="content">- testo della email..</span>
+      </div>
+      <!-- end email1 -->
+
+      <!-- emai2 -->
+      <div class="read">
+        <input type="checkbox" name="" value="">
+        <span class="star">&starf; Oggetto della email </span>
+        <span class="content">- testo della email..</span>
+      </div>
+      <!-- end email2 -->
+
+      <!-- emai3 -->
+      <div class="unread">
+        <input type="checkbox" name="" value="">
+        <span class="star">&starf; Oggetto della email </span>
+        <span class="content">- testo della email..</span>
+      </div>
+      <!-- end email3 -->
+
+      <!-- emai4 -->
+      <div class="unread">
+        <input type="checkbox" name="" value="">
+        <span class="star">&starf; Oggetto della email </span>
+        <span class="content">- testo della email..</span>
+      </div>
+      <!-- end email4 -->
+
+      <hr>
+
+      <!-- footer -->
+      <footer> GMail <span class="text">powered by Davide</span>
+      </footer>
+      <!-- end footer -->
+
+    </div>
+    <!-- end boxmail -->
+
+
+
 
 
 
